--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
+    "start": "node server/app.js",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run e2e",
     "lint": "eslint --ext .js,.vue src test/e2e/specs"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "marked": "^0.3.6",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1"
   },
