--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "highlight": "^0.2.4",
     "marked": "^0.3.6",
     "vue": "^2.1.0",
+    "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1"
   },
   "devDependencies": {
