--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "highlight": "^0.2.4",
     "marked": "^0.3.6",
+    "prismjs": "^1.6.0",
     "vue": "^2.1.0",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1"
@@ -30,13 +30,15 @@
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
     "chalk": "^1.1.3",
+    "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.1.0",
+    "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
     "eslint": "^3.7.1",
+    "eslint-config-standard": "^6.1.0",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^1.3.0",
-    "eslint-config-standard": "^6.1.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
@@ -48,13 +50,11 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
-    "chromedriver": "^2.21.2",
-    "cross-spawn": "^4.0.2",
     "nightwatch": "^0.9.8",
-    "selenium-server": "2.53.1",
-    "semver": "^5.3.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "selenium-server": "2.53.1",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
